* 2016-09-30 5.8.1
  add mode count-accesspoint-clients for cisco wlc
* 2016-09-20 5.8.0.2
  don't use | in interface-availability ascii output for notifications
* 2016-09-19 5.8.0.1
  fix pull request #107 (this was the last pull request i will accept for this plugin. sorry, if you are not able to test your contributions, go away)
* 2016-09-19 5.8
  update ucd-diskio, cumulus
* 2016-08-12 5.7.1.4
  update GLPlugin/Extraopts
* 2016-07-07 5.7.1.3
  remove trailing Nul from Bintec memories
* 2016-07-07 5.7.1.2
  Bintec doesn't like bulk requests
* 2016-06-16 5.7.1.1
  repair a pull request. 
* 2016-05-30 5.7.1
  update GLPlugin
* 2016-05-28 5.7.0.3
  bugfix in nortel hardware-checks. (Thanks trentasis)
* 2016-05-17 5.7.0.2
  Do not check UCDMIB swap when there is no swap
* 2016-05-14 5.7.0.1
  fix a typo in a filename (Thanks vifino)
* 2016-05-10 5.7
  add Bintec Bibo (1202)
  add Cisco ASA mode ha-role (including cluster-health check)
* 2016-05-10 5.6.1
  fix detection of Pulse Secure Gateways
* 2016-05-06 5.6
  more dhoffend pull requests (linux ucdmib memory, lmsensors)
* 2016-05-02 5.5
  add vrrp-modes
  dhoffend pull requests (linux ucdmib, lsmpio bugfix, hsrp multiple roles)
* 2016-03-29 5.4
  add CISCO-STACKWISE-MIB
  add processor index in cisco enhanced memory
* 2016-03-11 5.3.3
  Use 64bit-counters from cisco-enhanced-mempool-mib if available (cisco bug CSCuu46705)
  Merge pull request #61 from Napsty/checkpoint-mgmt
  Merge pull request #67 from Napsty/list-detail-alias
  Simplify interface code
* 2016-02-29 5.3.2
  Merge pull request #64 Claudio Kuenzler
* 2016-02-25 5.3.1
  bugfix in --ifspeed
* 2016-02-16 5.3
  add mode chassis-hardware-health (for cisco)
* 2016-02-16 5.2.2
  update checkpoint, use new mib
  fallback if no cisco cpu index can be found
* 2016-02-15 5.2.1
  refactor interface-usage, bugfix in list-interfaces
  bugfix in link-aggregation-availability thresholds
* 2016-02-09 5.2
  fix cisco bgp prefix count if no peers were found